<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    tools:context=".activity.CadastroDadosClinicosActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/activity_cadastro_dados_clinicos_tv_dadosdoprofissional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_cadastro_dados_clinicos_dadosdoprofissional"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/activity_cadastro_dados_clinicos_tv_cnsprofissional"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_cadastro_dados_clinicos_cnsprofissional"/>

            <EditText
                android:id="@+id/activity_cadastro_dados_clinicos_et_cnsprofissional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"/>

            <TextView
                android:id="@+id/activity_cadastro_dados_clinicos_tv_cnes"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_cadastro_dados_clinicos_cnes"/>

            <EditText
                android:id="@+id/activity_cadastro_dados_clinicos_et_cnes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="15"/>

            <TextView
                android:id="@+id/activity_cadastro_dados_clinicos_tv_dadosclinicos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/activity_cadastro_dados_clinicos_dadosclinicos"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/activity_cadastro_dados_clinicos_tv_altura"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_cadastro_dados_clinicos_altura" />

            <Spinner
                android:id="@+id/activity_cadastro_dados_clinicos_spn_altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>

            <TextView
                android:id="@+id/activity_cadastro_dados_clinicos_tv_peso"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_cadastro_dados_clinicos_peso" />

            <EditText
                android:id="@+id/activity_cadastro_dados_clinicos_et_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"/>

            <TextView
                android:id="@+id/activity_cadastro_dados_clinicos_tv_doencas"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_cadastro_dados_clinicos_doencasmonitoradas" />

            <CheckBox
                android:id="@+id/activity_cadastro_dados_clinicos_chk_i1015"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity_cadastro_dados_clinicos_i1015"/>

            <CheckBox
                android:id="@+id/activity_cadastro_dados_clinicos_chk_e1014"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity_cadastro_dados_clinicos_e1014"/>

            <CheckBox
                android:id="@+id/activity_cadastro_dados_clinicos_chk_e6568"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/activity_cadastro_dados_clinicos_e6568"/>

            <TextView
                android:id="@+id/activity_cadastro_dados_clinicos_tv_dadosmonitoramento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/activity_cadastro_dados_clinicos_dadosmonitoramento"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/activity_cadastro_dados_clinicos_tv_diasdecoleta"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_cadastro_dados_clinicos_diasdecoleta" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/activity_cadastro_dados_clinicos_chk_segunda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_cadastro_dados_clinicos_segunda"
                    android:onClick="mudarDia"/>
                <CheckBox
                    android:id="@+id/activity_cadastro_dados_clinicos_chk_terca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_cadastro_dados_clinicos_terca"
                    android:onClick="mudarDia"/>
                <CheckBox
                    android:id="@+id/activity_cadastro_dados_clinicos_chk_quarta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_cadastro_dados_clinicos_quarta"
                    android:onClick="mudarDia"/>
                <CheckBox
                    android:id="@+id/activity_cadastro_dados_clinicos_chk_quinta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_cadastro_dados_clinicos_quinta"
                    android:onClick="mudarDia"/>
                <CheckBox
                    android:id="@+id/activity_cadastro_dados_clinicos_chk_sexta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_cadastro_dados_clinicos_sexta"
                    android:onClick="mudarDia"/>
                <CheckBox
                    android:id="@+id/activity_cadastro_dados_clinicos_chk_sabado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_cadastro_dados_clinicos_sabado"
                    android:onClick="mudarDia"/>
                <CheckBox
                    android:id="@+id/activity_cadastro_dados_clinicos_chk_domingo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_cadastro_dados_clinicos_domingo"
                    android:onClick="mudarDia"/>
            </LinearLayout>

            <TextView
                android:id="@+id/activity_cadastro_dados_clinicos_tv_horariosdecoleta"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_cadastro_dados_clinicos_horariosdecoleta" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_cadastro_dados_clinicos_adicionar_horario"
                    android:onClick="adicionarHorario"/>
                <Button
                    android:id="@+id/activity_cadastro_dados_clinicos_bt_removerhorario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/activity_cadastro_dados_clinicos_remover_horario"
                    android:onClick="removerHorario"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/activity_cadastrodadosclinicas_ll_horarios"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
            </LinearLayout>

            <CheckBox
                android:id="@+id/activity_cadastrodadosclinicas_chk_enviarnotificacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/activity_cadastro_dados_clinicos_enviarnotificacao"/>

            <TextView
                android:id="@+id/activity_cadastro_dados_clinicos_tv_observacoes"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_cadastro_dados_clinicos_observacoes" />

            <EditText
                android:id="@+id/activity_cadastro_dados_clinicos_et_observacoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="500"
                android:maxLines="10"
                android:minLines="5"/>

            <Button
                android:id="@+id/activity_cadastro_dados_clinicos_btn_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_cadastro_dados_clinicos_cadastrar"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:onClick="cadastrar"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
