<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activity.AjudaCadastroRegistroAtividadeFisicaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pilates" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/activity_ajuda_titulo"
            android:text="@string/activity_cadastro_registro_atividade_fisica_atividades_alongamento"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_ajuda_texto"
            android:text="@string/activity_ajuda_cadastro_registro_atividade_fisica_alongamento" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_musculacao" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/activity_ajuda_titulo"
            android:text="@string/activity_cadastro_registro_atividade_fisica_musculacao"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_ajuda_texto"
            android:text="@string/activity_ajuda_cadastro_registro_atividade_fisica_musculacao" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_bicicleta" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/activity_ajuda_titulo"
            android:text="@string/activity_cadastro_registro_atividade_fisica_aerobico"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_ajuda_texto"
            android:text="@string/activity_ajuda_cadastro_registro_atividade_fisica_aerobico" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_natacao" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/activity_ajuda_titulo"
            android:text="@string/activity_cadastro_registro_atividade_fisica_esportes"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/activity_ajuda_texto"
            android:text="@string/activity_ajuda_cadastro_registro_atividade_fisica_esportes" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
